# rust-rest

./: Cargo.toml  LICENSE
sql/: schema.sql
src/: main.rs
src/entities/: mod.rs  prelude.rs  users.rs
