[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sea-orm = { version = "^0.6", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ], default-features = false }
dotenv = "0.15"
serde = "1"
